<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.github.marschall</groupId>
    <artifactId>native-bytebuffers-parent</artifactId>
    <version>0.4.1-SNAPSHOT</version>
  </parent>
  <artifactId>native-bytebuffers-benchmarks</artifactId>
  <name>Native ByteBuffers Benchmarks</name>

  <dependencies>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>native-bytebuffers</artifactId>
      <version>${project.version}</version>
    </dependency>

    <dependency>
      <groupId>org.openjdk.jmh</groupId>
      <artifactId>jmh-core</artifactId>
      <version>${jmh.version}</version>
    </dependency>
    
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>17</release>
          <!-- <compilerArg>add-modules jdk.incubator.foreign</compilerArg> -->
          <compilerArgs>
            <arg>--add-modules</arg>
            <arg>jdk.incubator.foreign</arg>
          </compilerArgs>
          <!-- without forking compilation happens in the same process, so no arguments are applied -->
          <fork>true</fork>
          <!-- <compilerArgument>add-modules jdk.incubator.foreign</compilerArgument> -->
          <annotationProcessorPaths>
            <annotationProcessorPath>
              <groupId>org.openjdk.jmh</groupId>
              <artifactId>jmh-generator-annprocess</artifactId>
              <version>${jmh.version}</version>
            </annotationProcessorPath>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <release>17</release>
          <additionalOptions>--add-modules jdk.incubator.foreign</additionalOptions>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-shade-plugin</artifactId>
        <configuration>
          <transformers>
            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
              <mainClass>com.github.marschall.nativebytebuffers.benchmarks.JmhMain</mainClass>
            </transformer>
          </transformers>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
